--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -49,6 +49,14 @@
 
 {%- endmacro %}
 
+{%- macro python_register_name(node) -%}
+{# provides the register name to use in the python visible parts of the API #}
+{%- if 'python_inst_name' in node.list_properties() -%}{{ node.get_property('python_inst_name') }}
+{%- elif is_safe_register_name(node) -%}{{node.inst_name}}
+{%- else -%}register_{{node.inst_name}}
+{%- endif -%}
+{%- endmacro -%}
+
 {%- macro child_readable_register_getter(node) %}
     def get_readable_registers(self, unroll=False) -> Iterator[Union[ReadableRegister, Tuple[ReadableRegister, ...]]]:
         """
@@ -59,12 +67,12 @@
                 {% if child_node.has_sw_readable %}
                     {% if child_node.is_array %}
         if unroll:
-            for child in self.{{child_node.inst_name}}:
+            for child in self.{{python_register_name(child_node)}}:
                 yield cast(ReadableRegister, child)
         else:
-            yield cast(Tuple[ReadableRegister, ...], self.{{child_node.inst_name}})
+            yield cast(Tuple[ReadableRegister, ...], self.{{python_register_name(child_node)}})
                     {% else %}
-        yield cast(ReadableRegister, self.{{child_node.inst_name}})
+        yield cast(ReadableRegister, self.{{python_register_name(child_node)}})
                     {%- endif %}
                 {%- endif -%}
             {%- endif -%}
@@ -84,12 +92,12 @@
                 {% if child_node.has_sw_writable %}
                     {% if child_node.is_array %}
         if unroll:
-            for child in self.{{child_node.inst_name}}:
+            for child in self.{{python_register_name(child_node)}}:
                 yield cast(WritableRegister, child)
         else:
-            yield cast(Tuple[WritableRegister, ...], self.{{child_node.inst_name}})
+            yield cast(Tuple[WritableRegister, ...], self.{{python_register_name(child_node)}})
                     {% else %}
-        yield cast(WritableRegister, self.{{child_node.inst_name}})
+        yield cast(WritableRegister, self.{{python_register_name(child_node)}})
                     {%- endif %}
                 {%- endif -%}
             {%- endif -%}
@@ -103,3 +111,4 @@
 {{ child_readable_register_getter(node) }}
 {{ child_writable_register_getter(node) }}
 {%- endmacro %}
+
