--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -63,6 +63,21 @@ class {{get_fully_qualified_type_name(node)}}_cls(MemoryWriteOnly):
     {{ child_writable_register_getter(node) }}
     {% endif %}
 
+    @property
+    def systemrdl_python_child_name_map(self) -> Dict[str, str]:
+        """
+        In some cases systemRDL names need to be converted make them python safe, this dictionary
+        is used to map the original systemRDL names to the names of the python attributes of this
+        class
+
+        Returns: dictionary whose key is the systemRDL names and value it the property name
+        """
+        return {
+            {%- for child_node in node.children(unroll=False) -%}
+            '{{child_node.inst_name}}':'{{python_register_name(child_node)}}',
+            {%- endfor %}
+            }
+
     {%- if node.is_array %}
         {%- if node.is_sw_readable and node.is_sw_writable %}
 class {{get_fully_qualified_type_name(node)}}_array_cls(MemoryReadWriteArray):
@@ -94,3 +109,11 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(MemoryWriteOnlyArray):
     {%- endif %}
 
 {%- endmacro %}
+
+{%- macro python_memory_name(node) -%}
+{# provides the register name to use in the python visible parts of the API #}
+{%- if 'python_inst_name' in node.list_properties() -%}{{ node.get_property('python_inst_name') }}
+{%- elif is_safe_memory_name(node) -%}{{node.inst_name}}
+{%- else -%}register_{{node.inst_name}}
+{%- endif -%}
+{%- endmacro -%}
