--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -114,6 +114,6 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(MemoryWriteOnlyArray):
 {# provides the register name to use in the python visible parts of the API #}
 {%- if 'python_inst_name' in node.list_properties() -%}{{ node.get_property('python_inst_name') }}
 {%- elif is_safe_memory_name(node) -%}{{node.inst_name}}
-{%- else -%}register_{{node.inst_name}}
+{%- else -%}memory_{{node.inst_name}}
 {%- endif -%}
 {%- endmacro -%}
