--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -832,6 +832,18 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
             {% endif %}
         {%- endfor %}
 
+    def test_name_map(self):
+        """
+        Check that the function for getting a node by its origianl systemRDL name works
+        """
+        {% for node in top_node.descendants(unroll=True) -%}
+        {% if not isinstance(node, systemrdlFieldNode) %}
+        {% for child_node in node.children(unroll=False) %}
+        self.assertEqual(self.dut.{{'.'.join(get_python_path_segments(node))}}.get_child_by_system_rdl_name('{{child_node.inst_name}}').inst_name, '{{child_node.inst_name}}')
+        {% endfor %}
+        {% endif %}
+        {% endfor %}
+
 class {{top_node.type_name}}_TestCase_BlockAccess(unittest.TestCase):
 
     def setUp(self):
