--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -40,7 +40,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
         # build the field attributes
         {%- for child_node in node.fields() %}
             {%- if isinstance(child_node, systemrdlFieldNode) %}
-        self.__{{child_node.inst_name}} = {{get_fully_qualified_type_name(child_node)}}_cls(
+        self.__{{child_node.inst_name}}:{{get_fully_qualified_type_name(child_node)}}_cls = {{get_fully_qualified_type_name(child_node)}}_cls(
             parent_register=self,
             size_props=FieldSizeProps(
                 width={{child_node.width}},
