--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -1,7 +1,7 @@
 {%- macro register_class_attributes(node) %}
         {%- if node.is_array %}
             {%- if node.has_sw_readable and node.has_sw_writable %}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
                                                                                              {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                                              address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                                              logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
@@ -10,7 +10,7 @@
                                                                                   logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                   inst_name='{{node.inst_name}}', parent=self)
             {%- elif node.has_sw_readable and not node.has_sw_writable %}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
                                                                                              {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                                              address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                                              logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
@@ -19,7 +19,7 @@
                                                                                   logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                   inst_name='{{node.inst_name}}', parent=self)
             {%- elif not node.has_sw_readable and node.has_sw_writable %}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
                                                                                              {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                                              address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                                              logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
@@ -30,17 +30,17 @@
             {%- endif %}
         {%- else %}
             {%- if node.has_sw_readable and node.has_sw_writable %}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_cls = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                  address=self.address+{{node.address_offset}},
                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                    inst_name='{{node.inst_name}}', parent=self)
             {%- elif node.has_sw_readable and not node.has_sw_writable %}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_cls = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                  address=self.address+{{node.address_offset}},
                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                    inst_name='{{node.inst_name}}', parent=self)
             {%- elif not node.has_sw_readable and node.has_sw_writable %}
-    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_cls = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                                  address=self.address+{{node.address_offset}},
                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                  inst_name='{{node.inst_name}}', parent=self)
