--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -143,9 +143,9 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
         {%- if node.has_sw_readable and node.has_sw_writable %}
 class {{get_fully_qualified_type_name(node)}}_array_cls(RegReadWriteArray):
         {%- elif node.has_sw_readable and not node.has_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_array_cls(RegReadWriteArray):
+class {{get_fully_qualified_type_name(node)}}_array_cls(RegReadOnlyArray):
         {%- elif not node.has_sw_readable and node.has_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_array_cls(RegReadWriteArray):
+class {{get_fully_qualified_type_name(node)}}_array_cls(RegWriteOnlyArray):
         {%- endif %}
     """
     Class to represent a register array in the register model
