--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -5,8 +5,7 @@
                                                                                              {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                                              address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                                              logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self)
-                                                                                             {%- if not loop.last -%} ,  {%- endif -%} {% endfor %} ),
+                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
                                                                                   logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                   inst_name='{{node.inst_name}}', parent=self)
             {%- elif node.has_sw_readable and not node.has_sw_writable %}
@@ -14,8 +13,7 @@
                                                                                              {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                                              address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                                              logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self)
-                                                                                             {%- if not loop.last -%} ,  {%- endif -%} {% endfor %} ),
+                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
                                                                                   logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                   inst_name='{{node.inst_name}}', parent=self)
             {%- elif not node.has_sw_readable and node.has_sw_writable %}
@@ -23,8 +21,7 @@
                                                                                              {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                                              address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
                                                                                              logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self)
-                                                                                             {%- if not loop.last -%} ,  {%- endif -%} {% endfor %} ),
+                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
                                                                                   logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                   inst_name='{{node.inst_name}}', parent=self)
             {%- endif %}
