--- a/tests/testcases/name_clash.rdl
+++ b/tests/testcases/name_clash.rdl
@@ -22,7 +22,7 @@ addrmap name_clash {
         field { fieldwidth=1; } finally = 1;
         field { fieldwidth=1; } yield = 1;
         field { fieldwidth=1; } in = 1;
-        field { fieldwidth=1; } field_in = 1;
+        //field { fieldwidth=1; } field_in = 1;
     } gpio_status;
 
     reg {
