--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -1,30 +1,11 @@
 {%- macro register_class_attributes(node) %}
         {%- if node.is_array %}
-            {%- if node.has_sw_readable and node.has_sw_writable %}
-    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
-                                                                                             {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                                             address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                             logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(address=self.address+{{node.raw_address_offset}},
+                                                                                  stride={{node.array_stride}},
+                                                                                  length={{get_array_dim(node)}},
                                                                                   logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                  inst_name='{{node.inst_name}}', parent=self)
-            {%- elif node.has_sw_readable and not node.has_sw_writable %}
-    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
-                                                                                             {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                                             address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                             logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
-                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                  inst_name='{{node.inst_name}}', parent=self)
-            {%- elif not node.has_sw_readable and node.has_sw_writable %}
-    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
-                                                                                             {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                                             address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                             logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
-                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                  inst_name='{{node.inst_name}}', parent=self)
-            {%- endif %}
+                                                                                  inst_name='{{node.inst_name}}', parent=self,
+                                                                                  callbacks=callbacks)
         {%- else %}
             {%- if node.has_sw_readable and node.has_sw_writable %}
     self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_cls = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
