--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -54,31 +54,12 @@ from ..lib import CallbackSet
         {{ register_class_attributes(node) }}
     {%- elif isinstance(node, systemrdlMemNode) %}
         {%- if node.is_array %}
-            {%- if node.is_sw_readable and node.is_sw_writable %}
-    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls ( elements = ( {% for node_instance_index in range(get_array_dim(node))  %}
-                                                                                                  {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                                                  address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                                  inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
-                                                                                     logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                     inst_name='{{node.inst_name}}', parent=self)
-            {%- elif node.is_sw_readable and not node.is_sw_writable %}
-    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls ( elements = ( {% for node_instance_index in range(get_array_dim(node))  %}
-                                                                                                  {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                                                  address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                                  inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
-                                                                                     logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                     inst_name='{{node.inst_name}}', parent=self)
-            {%- elif not node.is_sw_readable and node.is_sw_writable %}
-    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls ( elements = ( {% for node_instance_index in range(get_array_dim(node))  %}
-                                                                                                  {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                                                  address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                                  inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
-                                                                                     logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                     inst_name='{{node.inst_name}}', parent=self)
-             {%- endif %}
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(address=self.address+{{node.raw_address_offset}},
+                                                                                  stride={{node.array_stride}},
+                                                                                  length={{get_array_dim(node)}},
+                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
+                                                                                  inst_name='{{node.inst_name}}', parent=self,
+                                                                                  callbacks=callbacks)
         {%- else %}
             {%- if node.is_sw_readable and node.is_sw_writable %}
     self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_cls = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
@@ -99,13 +80,12 @@ from ..lib import CallbackSet
         {%- endif %}
     {%- elif isinstance(node, systemrdlRegfileNode) or isinstance(node, systemrdlAddrmapNode) %}
         {%- if node.is_array %}
-    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls( elements=( {% for node_instance_index in range(get_array_dim(node))  %}
-                                                                                                {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                                                                                            address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                                                                                            logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                                                                            inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self),{% endfor %} ),
-                                                                                    logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                    inst_name='{{node.inst_name}}', parent=self)
+    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(address=self.address+{{node.raw_address_offset}},
+                                                                                  stride={{node.array_stride}},
+                                                                                  length={{get_array_dim(node)}},
+                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
+                                                                                  inst_name='{{node.inst_name}}', parent=self,
+                                                                                  callbacks=callbacks)
         {%- else -%}
     self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_cls = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                             address=self.address+{{node.address_offset}},
@@ -197,12 +177,14 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(RegFileArray):
 
     def __init__(self, logger_handle: str, inst_name: str,
                  parent: Union[AddressMap, RegFile],
-                 elements: Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]):
+                 address: int,
+                 length: int,
+                 stride: int,
+                 callbacks: CallbackSet):
 
-        for element in elements:
-            if not isinstance(element, {{get_fully_qualified_type_name(node)}}_cls):
-                raise TypeError(f'All Elements should be of type {{get_fully_qualified_type_name(node)}}_cls, '
-                                f'found {type(element)}')
+        elements = tuple([{{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,address=address+(index * stride),
+                          logger_handle=f'{logger_handle}.{inst_name}[{index:d}]',
+                          inst_name=f'{inst_name}[{index:d}]', parent=parent) for index in range(length)])
 
         super().__init__(logger_handle=logger_handle, inst_name=inst_name,
                          parent=parent, elements=elements)
@@ -302,12 +284,14 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(AddressMapArray):
 
     def __init__(self, logger_handle: str, inst_name: str,
                  parent: AddressMap,
-                 elements: Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]):
+                 address: int,
+                 length: int,
+                 stride: int,
+                 callbacks: CallbackSet):
 
-        for element in elements:
-            if not isinstance(element, {{get_fully_qualified_type_name(node)}}_cls):
-                raise TypeError(f'All Elements should be of type {{get_fully_qualified_type_name(node)}}_cls, '
-                                f'found {type(element)}')
+        elements = tuple([{{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,address=address+(index * stride),
+                          logger_handle=f'{logger_handle}.{inst_name}[{index:d}]',
+                          inst_name=f'{inst_name}[{index:d}]', parent=parent) for index in range(length)])
 
         super().__init__(logger_handle=logger_handle, inst_name=inst_name,
                          parent=parent, elements=elements)
