--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -93,12 +93,14 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(MemoryWriteOnlyArray):
 
     def __init__(self, logger_handle: str, inst_name: str,
                  parent: AddressMap,
-                 elements: Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]):
+                 address: int,
+                 length: int,
+                 stride: int,
+                 callbacks: CallbackSet):
 
-        for element in elements:
-            if not isinstance(element, {{get_fully_qualified_type_name(node)}}_cls):
-                raise TypeError(f'All Elements should be of type {{get_fully_qualified_type_name(node)}}_cls, '
-                                f'found {type(element)}')
+        elements = tuple([{{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,address=address+(index * stride),
+                          logger_handle=f'{logger_handle}.{inst_name}[{index:d}]',
+                          inst_name=f'{inst_name}[{index:d}]', parent=parent) for index in range(length)])
 
         super().__init__(logger_handle=logger_handle, inst_name=inst_name,
                          parent=parent, elements=elements)
