--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -27,14 +27,6 @@
 
 {%- endmacro %}
 
-{%- macro python_register_name(node) -%}
-{# provides the register name to use in the python visible parts of the API #}
-{%- if 'python_inst_name' in node.list_properties() -%}{{ node.get_property('python_inst_name') }}
-{%- elif is_safe_register_name(node) -%}{{node.inst_name}}
-{%- else -%}register_{{node.inst_name}}
-{%- endif -%}
-{%- endmacro -%}
-
 {%- macro child_readable_register_getter(node) %}
     def get_readable_registers(self, unroll=False) -> Iterator[Union[ReadableRegister, Tuple[ReadableRegister, ...]]]:
         """
@@ -45,12 +37,12 @@
                 {% if child_node.has_sw_readable %}
                     {% if child_node.is_array %}
         if unroll:
-            for child in self.{{python_register_name(child_node)}}:
+            for child in self.{{safe_node_name(child_node)}}:
                 yield cast(ReadableRegister, child)
         else:
-            yield cast(Tuple[ReadableRegister, ...], self.{{python_register_name(child_node)}})
+            yield cast(Tuple[ReadableRegister, ...], self.{{safe_node_name(child_node)}})
                     {% else %}
-        yield cast(ReadableRegister, self.{{python_register_name(child_node)}})
+        yield cast(ReadableRegister, self.{{safe_node_name(child_node)}})
                     {%- endif %}
                 {%- endif -%}
             {%- endif -%}
@@ -70,12 +62,12 @@
                 {% if child_node.has_sw_writable %}
                     {% if child_node.is_array %}
         if unroll:
-            for child in self.{{python_register_name(child_node)}}:
+            for child in self.{{safe_node_name(child_node)}}:
                 yield cast(WritableRegister, child)
         else:
-            yield cast(Tuple[WritableRegister, ...], self.{{python_register_name(child_node)}})
+            yield cast(Tuple[WritableRegister, ...], self.{{safe_node_name(child_node)}})
                     {% else %}
-        yield cast(WritableRegister, self.{{python_register_name(child_node)}})
+        yield cast(WritableRegister, self.{{safe_node_name(child_node)}})
                     {%- endif %}
                 {%- endif -%}
             {%- endif -%}
